<resources>
    <string name="app_name">ArtiManus</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_correo">Correo Electronico</string>
    <string name="text_button_login">Iniciar</string>
    <string name="tex_button_registrar">Registrar</string>
    <string name="text_button_registrar">Registrarse</string>
    <string name="text_button_regresar">Regresar</string>
    <string name="toolbar_tittle_crear_cuenta">Crear Cuenta</string>
    <string name="buscar">Buscar</string>
    <string name="inicio">Inicio</string>
    <string name="favoritas">Favoritas</string>
    <string name="perfil">Perfil</string>
</resources>
